--- a/index.html
+++ b/index.html
@@ -6,29 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Design Life Kids</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="/common.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header class="header">
       <a class="header-logo" href="#">
-        <img src="/images/logo.svg" alt="logo" />
+        <img src="images/logo.svg" alt="logo" />
       </a>
       <nav class="header-nav">
         <ul>
-          <li><a href="/pages/blog/index.html" class="nav-link">Blog</a></li>
-          <li><a href="/pages/category-products/index.html" class="nav-link">Catalog</a></li>
+          <li><a href="pages/blog/index.html" class="nav-link">Blog</a></li>
+          <li><a href="pages/category-products/index.html" class="nav-link">Catalog</a></li>
           <li><a href="#" class="nav-link">About us</a></li>
         </ul>
         <ul>
-          <li><a href="#" class="search"><img src="/images/search.svg" class="search-icon" alt="search"/></a></li>
+          <li><a href="#" class="search"><img src="images/search.svg" class="search-icon" alt="search"/></a></li>
           <li><a href="#" class="nav-link nav-link_bold">Contact us</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section class="hero-slider">
-        <img src="/images/poster.png" alt="poster" />
+        <img src="images/poster.png" alt="poster" />
         <h1 class="title-hidden">Design Kids Life Collection</h1>
         <p class="hero-slider__number">01</p>
         <ul class="hero-slider__nav">
@@ -52,25 +52,25 @@
         <ul class="category-list">
           <li>
             <a href="#" class="category-products">
-              <img src="/images/product-1.jpg" alt="Apparel kids"/>
+              <img src="images/product-1.jpg" alt="Apparel kids"/>
               APPAREL KIDS
             </a>
           </li>
           <li>
             <a href="#" class="category-products">
-              <img src="/images/product-2.jpg" alt="Holiday shop"/>
+              <img src="images/product-2.jpg" alt="Holiday shop"/>
               HOLIDAY SHOP
             </a>
           </li>
           <li>
-            <a href="/pages/toys-for-kids/index.html" class="category-products">
-              <img src="/images/product-3.jpg" alt="Toys"/>
+            <a href="pages/toys-for-kids/index.html" class="category-products">
+              <img src="images/product-3.jpg" alt="Toys"/>
               TOYS
             </a>
           </li>
           <li>
             <a href="#" class="category-products">
-              <img src="/images/product-4.jpg" alt="Accessories"/>
+              <img src="images/product-4.jpg" alt="Accessories"/>
               ACCESSORIES
             </a>
           </li>
@@ -92,7 +92,7 @@
         </div>
       </section>
       <section class="services">
-        <img src="/images/Delivery.jpg" alt="lady" />
+        <img src="images/Delivery.jpg" alt="lady" />
         <h2 class="block-title">Delivery</h2>
         <ul class="services-list">
           <li><button class="services-button services-button_active">Delivery</button></li>
@@ -141,7 +141,7 @@
         and there are other days that i am completely shocked that
         four years have flown by. It's simply magical.
       </p>
-      <img class="map" src="/map.png" alt="map" />
+      <img class="map" src="map.png" alt="map" />
     </article>
     <footer class="footer">
       <h2 class="footer-title">Navigation</h2>
@@ -170,10 +170,10 @@
         </button>
       </form>
       <ul class="social-list">
-        <li><a href="#" class="social-link"><img src="/images/Facebook.svg" alt="Facebook" /></a></li>
-        <li><a href="#" class="social-link"><img src="/images/Twitter.svg" alt="Twitter" /></a></li>
-        <li><a href="#" class="social-link"><img src="/images/Pinterest.svg" alt="Pinterest" /></a></li>
-        <li><a href="#" class="social-link"><img src="/images/Instagram.svg" alt="Instagram" /></a></li>
+        <li><a href="#" class="social-link"><img src="images/Facebook.svg" alt="Facebook" /></a></li>
+        <li><a href="#" class="social-link"><img src="images/Twitter.svg" alt="Twitter" /></a></li>
+        <li><a href="#" class="social-link"><img src="images/Pinterest.svg" alt="Pinterest" /></a></li>
+        <li><a href="#" class="social-link"><img src="images/Instagram.svg" alt="Instagram" /></a></li>
       </ul>
       <div class="company-info">
         <div class="rating">
