--- a/pages/category-products/index.html
+++ b/pages/category-products/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Category products</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="/common.css">
-    <link rel="stylesheet" href="/pages/category-products/style.css">
+    <link rel="stylesheet" href="../../common.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header class="header">
-      <a class="header-logo" href="/index.html">
-        <img src="/images/logo.svg" alt="logo" />
+      <a class="header-logo" href="../../index.html">
+        <img src="../../images/logo.svg" alt="logo" />
       </a>
       <nav class="header-nav">
         <ul>
@@ -21,7 +21,7 @@
           <li><a href="#" class="nav-link">About us</a></li>
         </ul>
         <ul>
-          <li><a href="#" class="search"><img src="/images/search.svg" class="search-icon" alt="search"/></a></li>
+          <li><a href="#" class="search"><img src="../../images/search.svg" class="search-icon" alt="search"/></a></li>
           <li><a href="#" class="nav-link nav-link_bold">Contact us</a></li>
         </ul>
       </nav>
@@ -30,43 +30,43 @@
       <section class="products">
         <h1 class="section-title">Category Products</h1>
         <ul class="breadcrumbs">
-          <li><a href="/index.html" class="breadcrumbs-link">Home</a></li>
+          <li><a href="../../index.html" class="breadcrumbs-link">Home</a></li>
           <li class="breadcrumb">Catalog</li>
         </ul>
         <ul class="category-list">
           <li>
             <a href="#" class="category-products">
-              <img src="/images/product-1.jpg" alt="Apparel kids"/>
+              <img src="../../images/product-1.jpg" alt="Apparel kids"/>
               APPAREL KIDS
             </a>
           </li>
           <li>
             <a href="#" class="category-products">
-              <img src="/images/product-2.jpg" alt="Holiday shop"/>
+              <img src="../../images/product-2.jpg" alt="Holiday shop"/>
               HOLIDAY SHOP
             </a>
           </li>
           <li>
-            <a href="/pages/toys-for-kids/index.html" class="category-products">
-              <img src="/images/product-3.jpg" alt="Toys"/>
+            <a href="../toys-for-kids/index.html" class="category-products">
+              <img src="../../images/product-3.jpg" alt="Toys"/>
               TOYS
             </a>
           </li>
           <li>
             <a href="#" class="category-products">
-              <img src="/images/product-4.jpg" alt="Accessories"/>
+              <img src="../../images/product-4.jpg" alt="Accessories"/>
               ACCESSORIES
             </a>
           </li>
           <li>
             <a href="#" class="category-products">
-              <img src="/images/product-5.jpg" alt="Sale"/>
+              <img src="../../images/product-5.jpg" alt="Sale"/>
               SALE
             </a>
           </li>
           <li>
             <a href="#" class="category-products">
-              <img src="/images/product-6.jpg" alt="Apparel adults"/>
+              <img src="../../images/product-6.jpg" alt="Apparel adults"/>
               APPAREL ADULTS
             </a>
           </li>
@@ -119,10 +119,10 @@
         </button>
       </form>
       <ul class="social-list">
-        <li><a href="#" class="social-link"><img src="/images/Facebook.svg" alt="Facebook" /></a></li>
-        <li><a href="#" class="social-link"><img src="/images/Twitter.svg" alt="Twitter" /></a></li>
-        <li><a href="#" class="social-link"><img src="/images/Pinterest.svg" alt="Pinterest" /></a></li>
-        <li><a href="#" class="social-link"><img src="/images/Instagram.svg" alt="Instagram" /></a></li>
+        <li><a href="#" class="social-link"><img src="../../images/Facebook.svg" alt="Facebook" /></a></li>
+        <li><a href="#" class="social-link"><img src="../../images/Twitter.svg" alt="Twitter" /></a></li>
+        <li><a href="#" class="social-link"><img src="../../images/Pinterest.svg" alt="Pinterest" /></a></li>
+        <li><a href="#" class="social-link"><img src="../../images/Instagram.svg" alt="Instagram" /></a></li>
       </ul>
       <div class="company-info">
         <div class="rating">
