--- a/pages/toys-for-kids/index.html
+++ b/pages/toys-for-kids/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Toys for Kids</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="/common.css">
-    <link rel="stylesheet" href="/pages/toys-for-kids/style.css">
+    <link rel="stylesheet" href="../../common.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header class="header">
-      <a class="header-logo" href="/index.html">
-        <img src="/images/logo.svg" alt="logo" />
+      <a class="header-logo" href="../../index.html">
+        <img src="../../images/logo.svg" alt="logo" />
       </a>
       <nav class="header-nav">
         <ul>
@@ -21,7 +21,7 @@
           <li><a href="#" class="nav-link">About us</a></li>
         </ul>
         <ul>
-          <li><a href="#" class="search"><img src="/images/search.svg" class="search-icon" alt="search"/></a></li>
+          <li><a href="#" class="search"><img src="../../images/search.svg" class="search-icon" alt="search"/></a></li>
           <li><a href="#" class="nav-link nav-link_bold">Contact us</a></li>
         </ul>
       </nav>
@@ -30,8 +30,8 @@
     <section class="toys">
       <h1 class="section-title">Toy for kids</h1>
       <ul class="breadcrumbs">
-        <li><a href="/index.html" class="breadcrumbs-link">Home</a></li>
-        <li><a href="/pages/category-products/index.html" class="breadcrumbs-link">Catalog</a></li>
+        <li><a href="../../index.html" class="breadcrumbs-link">Home</a></li>
+        <li><a href="../category-products/index.html" class="breadcrumbs-link">Catalog</a></li>
         <li class="breadcrumb">Toys</li>
       </ul>
       <form class="toys-filter">
